test(backend): update unit tests to align with refactored logic